test/types/string/assignToChar/testCArray.11.good
Helpers.chpl:32: In function 'testCArray':
Helpers.chpl:36: error: Cannot assign to uint(8) from string
Helpers.chpl:36: note: did you mean to call '.toByte()'?
  testCArray.chpl:26: called as testCArray(param strBytes = "hello", type toType = uint(8))
